# Sutoku

./: CMakeLists.txt  README.md  analyzer.cpp  analyzer.h  analyzer.hpp  appinfo.json  bamreader.cpp  cnanalysis.cpp  exception.h  main.cpp  param.cpp  param.h  sranalysis.cpp  util.cpp  util.h  varcheck.cpp  varsearch.cpp
.github/workflows/: c-cpp.yml
plugin/: CMakeLists.txt  MutagenHomoFilter.cpp  VCHardFilter.cpp
src/: CMakeLists.txt  analyzer.cpp  analyzer.h  bamreader.cpp  cnanalysis.cpp  exception.h  param.cpp  param.h  profile.h  sranalysis.cpp  util.cpp  util.h  varcheck.cpp  varsearch.cpp
